# cog

./: .gitignore  LICENSE  README.md  cog.cabal
main/: cog.hs
src/: Cog.hs
test/: test.hs
